--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "~9.0.0",
-    "@nestjs/config": "^2.3.2",
+    "@nestjs/config": "~2.3.2",
     "@nestjs/schematics": "~9.0.0",
     "@nestjs/swagger": "~6.3.0",
     "@nestjs/testing": "~9.0.0",
