--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@nestjs/common": "~9.0.0",
     "@nestjs/core": "~9.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/mongoose": "~9.2.2",
+    "@nestjs/passport": "~9.0.3",
     "@nestjs/platform-express": "~9.0.0",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.0",
+    "firebase-admin": "~11.9.0",
     "mongodb": "~5.5.0",
     "mongoose": "~7.2.1",
+    "passport": "~0.6.0",
+    "passport-firebase-jwt": "~1.2.1",
     "reflect-metadata": "~0.1.13",
     "rxjs": "~7.2.0"
   },
@@ -46,7 +50,7 @@
     "@typescript-eslint/parser": "~5.33.0",
     "eslint": "~8.0.1",
     "eslint-config-prettier": "~8.3.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "~2.27.5",
     "eslint-plugin-prettier": "~4.0.0",
     "jest": "~29.5.0",
     "prettier": "~2.3.2",
