--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@nestjs/platform-express": "~9.0.0",
     "class-transformer": "~0.5.1",
     "class-validator": "~0.14.0",
+    "cloudinary": "^1.37.0",
     "firebase-admin": "~11.9.0",
-    "mongodb": "~5.5.0",
-    "mongoose": "~7.2.1",
+    "mongo-gridfs": "~1.1.0",
+    "mongodb": "~4.16",
+    "mongoose": "~6.11",
+    "multer-gridfs-storage": "~5.0.2",
     "passport": "~0.6.0",
     "passport-firebase-jwt": "~1.2.1",
     "reflect-metadata": "~0.1.13",
@@ -45,6 +48,8 @@
     "@nestjs/testing": "~9.0.0",
     "@types/express": "~4.17.13",
     "@types/jest": "~29.5.1",
+    "@types/multer": "~1.4.7",
+    "@types/multer-gridfs-storage": "~4.0.5",
     "@types/node": "~18.16.12",
     "@types/supertest": "~2.0.11",
     "@typescript-eslint/eslint-plugin": "~5.33.0",
