--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,13 +62,8 @@ jobs:
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             git stash
-            if cd ${{ github.repository }}; 
-            then 
-              git pull; 
-            else 
-              git clone ${{ github.server_url }}/${{ github.repository }};
-            fi
-            cd ./${{ github.repository }}
+            git -C ${{ github.repository }} pull || git clone ${{ github.server_url }}/${{ github.repository }}
+            cd $HOME/${{ github.repository }}
             yarn install --production --frozen-lockfile --network-timeout 1000000000
             yarn run start
 
