--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "tsconfig-paths": "~4.2.0",
     "typescript": "~4.5.4"
   },
+  "resolutions": {
+    "multer-gridfs-storage": "~5.0.2"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
