--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           AWS_DEFAULT_REGION   : ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Deploy to prod server
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.10
         env:  
           REPO_NAME                  : ${{ github.event.repository.name }}
           GIT_SHA                    : ${{ github.sha }}
