--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,6 @@ jobs:
       
       - name: Deploy to prod server
         env:  
-          SHA                        : ${{ github.sha }}
           REPO_NAME                  : ${{ github.event.repository.name }}
           GIT_SHA                    : ${{ github.sha }}
           PORT                       : ${{ secrets.PORT }}
@@ -62,7 +61,6 @@ jobs:
           passphrase: ${{ secrets.AWS_SSH_PASSPHRASE }}
           envs: SHA,GIT_SHA,PORT,NODE_ENV,APP_NAME,JWT_EXPIRES_IN,JWT_SECRET,JWT_SECRET,COOKIE_SECRET,FRONTEND_DOMAIN,API_PREFIX,REMOTE_MONGODB_URI,MDB_NAME,VNP_URL,VNP_RETURN_URL,VNP_HASHSECRET,VNP_TMNCODE,FIREBASE_TYPE,FIREBASE_PROJECT_ID,FIREBASE_PRIVATE_KEY_ID,FIREBASE_PRIVATE_KEY,FIREBASE_CLIENT_EMAIL,FIREBASE_CLIENT_ID,FIREBASE_AUTH_URI,FIREBASE_TOKEN_URI,FIREBASE_AUTH_PROVIDER_X509,FIREBASE_CLIENT_X509,FIREBASE_UNIVERSAL_DOMAIN,CLOUDINARY_NAME,CLOUDINARY_API_KEY,CLOUDINARY_API_SECRET
           script: |
-            export GIT_SHA=${{github.sha}}
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
             git stash
@@ -70,6 +68,8 @@ jobs:
             cd $PWD/${{ env.REPO_NAME }}
             yarn install --frozen-lockfile --network-timeout 1000000000
             pm2 restart ${{ env.REPO_NAME }}
+            echo $GIT_SHA
+            echo $REPO_NAME
       
       - name: Remove Github Actions IP from security group
         run: |
