--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
           username: ec2-user
           key: ${{ secrets.AWS_SSH_KEY }}
           passphrase: ${{ secrets.AWS_SSH_PASSPHRASE }}
-          envs: SHA,GIT_SHA,PORT,NODE_ENV,APP_NAME,JWT_EXPIRES_IN,JWT_SECRET,JWT_SECRET,COOKIE_SECRET,FRONTEND_DOMAIN,API_PREFIX,REMOTE_MONGODB_URI,MDB_NAME,VNP_URL,VNP_RETURN_URL,VNP_HASHSECRET,VNP_TMNCODE,FIREBASE_TYPE,FIREBASE_PROJECT_ID,FIREBASE_PRIVATE_KEY_ID,FIREBASE_PRIVATE_KEY,FIREBASE_CLIENT_EMAIL,FIREBASE_CLIENT_ID,FIREBASE_AUTH_URI,FIREBASE_TOKEN_URI,FIREBASE_AUTH_PROVIDER_X509,FIREBASE_CLIENT_X509,FIREBASE_UNIVERSAL_DOMAIN,CLOUDINARY_NAME,CLOUDINARY_API_KEY,CLOUDINARY_API_SECRET
+          envs: GIT_SHA,PORT,NODE_ENV,APP_NAME,JWT_EXPIRES_IN,JWT_SECRET,JWT_SECRET,COOKIE_SECRET,FRONTEND_DOMAIN,API_PREFIX,REMOTE_MONGODB_URI,MDB_NAME,VNP_URL,VNP_RETURN_URL,VNP_HASHSECRET,VNP_TMNCODE,FIREBASE_TYPE,FIREBASE_PROJECT_ID,FIREBASE_PRIVATE_KEY_ID,FIREBASE_PRIVATE_KEY,FIREBASE_CLIENT_EMAIL,FIREBASE_CLIENT_ID,FIREBASE_AUTH_URI,FIREBASE_TOKEN_URI,FIREBASE_AUTH_PROVIDER_X509,FIREBASE_CLIENT_X509,FIREBASE_UNIVERSAL_DOMAIN,CLOUDINARY_NAME,CLOUDINARY_API_KEY,CLOUDINARY_API_SECRET
           script: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
@@ -67,9 +67,8 @@ jobs:
             git -C ${{ env.REPO_NAME }} pull || git clone ${{ github.server_url }}/${{ github.repository }} ${{ env.REPO_NAME }}
             cd $PWD/${{ env.REPO_NAME }}
             yarn install --frozen-lockfile --network-timeout 1000000000
+            echo "GIT_SHA=$GIT_SHA" >> .env
             pm2 restart ${{ env.REPO_NAME }}
-            echo $GIT_SHA
-            echo $REPO_NAME
       
       - name: Remove Github Actions IP from security group
         run: |
